# show-case-blogs

./: .env  .railwayignore  ANALYSIS_REPORT.md  Dockerfile  EMAIL_CONFIGURATION.md  WARP.md  backup.json  blog_dump.sql  db.sqlite3  manage.py  package-lock.json  pyproject.toml  requirements.txt  ssh_gitlab  ssh_gitlab.pub
blog/: admin.py  context_processors.py  forms.py  models.py  urls.py  utils.py  views.py
blog/management/commands/: create_admin.py  create_blog_admin.py  migrate_article_styles.py
blog/migrations/: 0001_initial.py  0002_commenter_alter_attachment_options_article_islike_and_more.py  0003_alter_admin_table_alter_article_table_and_more.py  0004_alter_article_slug.py  0005_article_content_json.py  0006_attachment_caption_attachment_display_style.py  0007_attachment_image_sizes.py  0008_comment_like_delete_commenter_and_more.py  0009_category_remove_article_content_json_admin_role_and_more.py  0010_alter_article_content.py  0011_category_created_at.py
blog/templates/blog/: _sidebar.html  admin_dashboard.html  article_preview.html  (+13 more)
daycare/: settings.py  urls.py
daycare_ambassadeurs/: apps.py  urls.py  views.py
nursery/: admin.py  models.py  urls.py  views.py
nursery/migrations/: 0001_initial.py
staticfiles/css/: smart-images.css
staticfiles/images/: LoadingBrochure.json  baby.json  barrier.json  comfort.json  contact.json  conversation.json  edit.json  policy.json
staticfiles/js/: home.js  smart-image-handler.js
staticfiles/style/: blog.css  home.css
theme/static_src/: package-lock.json  tailwind.config.js
theme/templates/: base.html
(+39 files in other folders)
